style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/


.footer {
	background-color: #6288a5;
	height: 50px;
	width: 100%;
	display: block;
}
.header {
	text-align:center;
	font-size: 35px;
	height: 42px;
	border-bottom: 1px solid rgb(218, 216, 216);
	position: fixed;
	background: white;
	width:100%;

	}
	
	.header-text{
		float: left;
		font-size: 15px;
		margin-left: 2%;
		margin-top: 1%;
		font-weight: bold;

	}

	
  .img-div{
	width: 100%;
	padding-top: 5%;
	padding-bottom: 5%;
	justify-content: center;
	
	}
	


  .column.right {
	float: right;
	width: 23%;
	padding: 1px;
background:red;
  }
  
  .column.center {
	float: left;
	width: 50%;
	

	text-align: center;
	justify-content: center;

	
  }
  .column.center p{
	text-align: left;
	
  }
  .column.left {
	float: left;
	width: 25%;
	padding: 10px;	
  }

	

  .row:after {
	content: "";
	display: table;
	clear: both;
  }
  
  @media (max-width: 600px) {
	.column {
	  width: 100%;
	}
  }  



/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

a{text-decoration: none;
color:rgb(31, 30, 30);}



.title{
	font: Verdana,sans-serif ;
	font-size: 40px;
	width: 60%;
	display: block;
	margin: 5.9% 28% 2% 28%;
	font-style: italic;
	font-weight: bold;

}

img.main-image{
	width: 70%;
	display: block;
	margin: auto;
}

img.nyt-logo{

	width: 14%;
	margin: 0.5% auto;
	display: inline-block;
}

.img-article{
	width: 86%;
	display: block;
	margin-top: 5%;
}

.text-image{
	color: rgb(121, 121, 121);
	font-size: 17px;
	width: 70%;
	display: block;
	margin: 0.8% auto 0%;
}

.sub-text-image{
	color: rgb(148, 147, 147);
	font-size: 13px;
	width: 70%;
	display: block;
	margin: 0% auto;

}
.author-name{
	font-weight: bold;
	font-size: 14px;
	text-align: left;
	margin: 1% 0;
}
.date-h{
	
	font-size: 13px;
	text-align: left;
	margin: 1% 0;
}
.fas,.fab,.far{font-size:18px;margin:1.5%;float: right;}


.buttons{
  float: right;
  background-color: #6288a5;
	border: 1px solid #326891;
	border-radius: 5%;
	color: white;
	
  text-align: center;
  text-decoration: none;
  
	cursor: pointer;
	
	width: 120px;
	height: 35px;
	padding: 7px; 
	margin:0.3% 0.5% 0% 0.2%;

	font-weight: bold;
	font-size: 12px;
}

.buttons[value="LOG IN"]{

	width: 62px;


}

.buttons[value="comments"]{

	width: 330px;
	float: left;
	margin-bottom: 10%;
}

.buttons:hover {
  background-color: #326891;
}

.fab.fa-sistrix{
	font-size: 16px;
	margin :1%;
float: left;
}
.fas.fa-bars{
	font-size: 16px;
	margin :1%;
float: left;
}

p{
	font-family: serif;
	line-height: 1.6;
	font-size: 20px;
	color: rgb(53, 53, 53);
	justify-content: left;
	width: 570px;
}


.yt-video{
	display: block;
}




.footer-text{

	color:white;
	float: right;
	font-weight: bold;
	font-size: 13px; 

	
}


.nyt-links{
	width: 90%;

	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	height: 50%;
	justify-content: center;
	justify-content: space-between;
	margin: 2% auto;
	border-bottom: 1px solid #cfcfcf;

}

.set-links{
	width: 10%;
	height: 50%;
	padding:2%;
	box-sizing: border-box;
	
}


.above-links{
	width: 100%;
	clear: both;
	margin-top: 8%;
	border-top: 3px double #cfcfcf;
	text-align: center;
	display: block;


}

.nyt-data{

	clear:both;
	margin-bottom: 40px;
	display: block;
	text-align: center;
	font-size: 10px;}

.nyt-data a{

	margin: auto 10px auto 10px;
	color: rgb(168, 168, 168);

}


#second-logo{

	display: block;
	width: 13%;
	margin: 1% 90% auto 2%;
	clear: both;}

	.set-links.last{
		border-left:1px solid grey;
	}
	.underlined-link{
		border-bottom:1px solid grey;
		margin-bottom: 10%;
	}



	.right-container-one{

			width: 70%;
			margin: 290% auto;

		
	}


	.right-container-two{

			width: 70%;
			margin: auto;


		
		
	}

	.editors-picks{

		border-bottom: 1px solid #cfcfcf;
		margin: 10% 2% 10% 5%;
		padding: 7%;
		
	}


	.img-picks{

		width: 35%;
		float: left;
		margin: auto 4% auto auto;
	}

	.right-container-one a{

		float: right;
		margin: 5% auto 2% 5%;
		justify-content: left;
		font-size: 15px;
	}




	.list-item-text-right{

		font-size: 13px;
		color: #979797;
	}

	.list-item-title-right{
		font-weight: bold;
		font-size: 20px;
		margin-bottom: 5px;
	}
	

	.buttons[value="right-btn"]{

		width: 190px;
		float: left;
		text-align: center;
		margin: 5% auto auto auto;
	}

	.container-above-links{width:75%}
	
	.in-container-above{
		width:70%;
		display:flex;
		flex-direction:row;
		flex-wrap:wrap;
		margin-bottom: 2%;
		padding-top: 2%;
		border-top: 1px solid black;
		background: #979797;
		
	
	}
	.above-container-child{
		width:32%;
	}

	.in-container-below{
		width:60%;
		display:flex;
		flex-direction:row;
		flex-wrap:wrap;
		margin-bottom: 2%;
	}
	.below-container-child{
		width:32%;
	}
	.nav-bar{
		width: 20%;
		background-color:red;
		height:100%;
		border-top: 1px solid rgb(251, 255, 28);

	}
	.container-above-header{
		width:100%;

		background: #6288a5;

	}
	.first-con {
		display:flex;
		flex-direction:row ;
		width:100%;
		flex-wrap: wrap;
		background: pink;
	}


	.cont-imgs{

		width: 75%;
	}

	.above-container-child p{

		font-size: 15px;
	}


	.container-above-header{

		border-top: 1px solid black;
	}


	.nav-bar li{

		font-weight: bold;
		margin: 3% auto 3% auto;
		font-size: 16px;
		border-top: 1px solid #cfcfcf;
		padding-top: 7%;
	}

	.nav-bar p{
	
	font-size: 14px;
	font-weight: bold;
	padding-top: 5%;
	padding-bottom: 0%;

	}

	.set-links-last{

		justify-content: left;
		padding-right: 5%;


	}


	.inflation-img{

		width: 90%;
	}

